--- a/index.ipynb
+++ b/index.ipynb
@@ -443,6 +443,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    return list\n",
     "    pass"
    ]
   },
