Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda res))\n",
+    "    return list(filter(lambda resstaurant: not ))\n",
     "    pass"
    ]
   },
