--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    re\n",
+    "    return list\n",
     "    pass"
    ]
   },
